--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGOURI = mongodb+srv://acancoffee:030993acan@cluster-me-ivh7a.mongodb.net/test?retryWrites=true&w=majority
+DB_MONGO = "mongodb://localhost/heroes"
